// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`gcs – user-credentials next create 1`] = `
{
  "headers": {
    "accept": "*/*",
    "accept-encoding": "gzip,deflate",
    "connection": "close",
    "content-length": "136",
    "content-type": "application/json",
    "host": "fa5e.bd7c.data.globus.org",
    "user-agent": "node-fetch/1.0 (+https://github.com/bitinn/node-fetch)",
  },
  "json": {
    "DATA_TYPE": "user_credential#1.0.0",
    "identity_id": "some-identity-uuid",
    "storage_gateway_id": "some-gateway-uuid",
    "username": "some name",
  },
  "method": "POST",
  "url": "https://fa5e.bd7c.data.globus.org/api/user_credentials",
}
`;

exports[`gcs – user-credentials next get 1`] = `
{
  "headers": {
    "accept": "*/*",
    "accept-encoding": "gzip,deflate",
    "connection": "close",
    "host": "fa5e.bd7c.data.globus.org",
    "user-agent": "node-fetch/1.0 (+https://github.com/bitinn/node-fetch)",
  },
  "method": "GET",
  "url": "https://fa5e.bd7c.data.globus.org/api/user_credentials/some-uuid",
}
`;

exports[`gcs – user-credentials next getAll 1`] = `
{
  "headers": {
    "accept": "*/*",
    "accept-encoding": "gzip,deflate",
    "connection": "close",
    "host": "fa5e.bd7c.data.globus.org",
    "user-agent": "node-fetch/1.0 (+https://github.com/bitinn/node-fetch)",
  },
  "method": "GET",
  "url": "https://fa5e.bd7c.data.globus.org/api/user_credentials",
}
`;

exports[`gcs – user-credentials next patch 1`] = `
{
  "headers": {
    "accept": "*/*",
    "accept-encoding": "gzip,deflate",
    "connection": "close",
    "content-length": "32",
    "content-type": "application/json",
    "host": "fa5e.bd7c.data.globus.org",
    "user-agent": "node-fetch/1.0 (+https://github.com/bitinn/node-fetch)",
  },
  "json": {
    "username": "some patched name",
  },
  "method": "PATCH",
  "url": "https://fa5e.bd7c.data.globus.org/api/user_credentials/some-uuid",
}
`;

exports[`gcs – user-credentials next remove 1`] = `
{
  "headers": {
    "accept": "*/*",
    "accept-encoding": "gzip,deflate",
    "connection": "close",
    "host": "fa5e.bd7c.data.globus.org",
    "user-agent": "node-fetch/1.0 (+https://github.com/bitinn/node-fetch)",
  },
  "method": "DELETE",
  "url": "https://fa5e.bd7c.data.globus.org/api/user_credentials/some-uuid",
}
`;

exports[`gcs – user-credentials next update 1`] = `
{
  "headers": {
    "accept": "*/*",
    "accept-encoding": "gzip,deflate",
    "connection": "close",
    "content-length": "142",
    "content-type": "application/json",
    "host": "fa5e.bd7c.data.globus.org",
    "user-agent": "node-fetch/1.0 (+https://github.com/bitinn/node-fetch)",
  },
  "json": {
    "DATA_TYPE": "user_credential#1.0.0",
    "identity_id": "some-identity-uuid",
    "storage_gateway_id": "some-gateway-uuid",
    "username": "some other name",
  },
  "method": "PUT",
  "url": "https://fa5e.bd7c.data.globus.org/api/user_credentials/some-uuid",
}
`;
